# authorg

./: Makefile.am  TODO  acinclude.m4  autogen.sh  configure.ac  configure.in
data/: Makefile.am  authorg.schemas
doc/reference/: Makefile.am
doc/reference/libvideofile/: Makefile.am  libvideofile-sections.txt
libconfig/: Makefile.am  settings-page.c  settings-page.h  tools-page.c  tools-page.h
libvideofile/: Makefile.am  empty.xpm  ffmpeg-util.c  ffmpeg-util.h  video-file-mpeg.c  video-file-mpeg.h  video-file.c  video-file.h  video-store.c  video-store.h
po/: POTFILES.in  de.po
src/: Makefile.am  about.c  about.h  authorg.c  authorg.h  chapter-editor.c  chapter-editor.h  main-window.c  main-window.h  spawn-dialog.c  spawn-dialog.h  util.c  util.h
tools/: header.txt  newgobject.pl  newgtkclass.pl
